# yukie-mail-rn

./: .gitignore  App.tsx  README.md  app.json  babel.config.js  package.json
App/: RootNavigation.tsx  ScreenList.tsx  ScreenWrapper.tsx  app.tsx  index.tsx
App/actions/: action.types.tsx
App/component/: footer.tsx
App/component/Dialog/: DialogTextComponent.tsx  DialogWithLoadingIncicator.tsx
App/component/DrawerMenu/: DrawerItems.tsx  index.tsx
App/component/Keyboard/: TextInputAvoidingView.tsx  index.tsx
App/component/contactItem/: ContactItem.tsx  index.ts
App/component/contactList/: ContactList.tsx  index.ts  styles.ts  styles.web.ts
App/component/customHandle/: CustomHandle.tsx  index.ts
App/component/icons/: basicIcons.tsx
App/component/markdownEditor/: index.tsx  vditor.tsx
App/component/searchHandle/: SearchHandle.tsx  index.ts
App/hooks/: index.tsx
App/locales/: index.tsx
App/screens/CalendarScreen/: calendar.tsx  index.tsx
App/screens/EditScreen/: index.tsx  vditor.tsx
App/screens/LoginScreen/: login.tsx
App/screens/MailListScreen/: CustomFAB.tsx  CustomFABControls.tsx  MailList.tsx  index.ts
App/screens/MailReadScreen/: index.tsx  reader.tsx  test.ipynb
App/screens/MailReadScreen/data/: Device App.html  index.tsx  欢迎使用你的新 Outlook.com 帐户.eml  航旅纵横-个人乘机凭证.eml
App/screens/MailReadScreen/item/: 航旅纵横-个人乘机凭证emlpart-001.html
App/screens/OnboardScreen/: index.tsx
App/screens/SettingScreen/: customFAB.tsx  index.tsx
App/storage/: index.tsx
App/storage/reducer/: account.reducer.tsx  accountSlice.tsx  appReducer.tsx  calendarSlice.tsx  email.reducer.tsx  index.tsx  messageSlice.tsx  temState.tsx  threadSlice.tsx
App/types/: command.ts  index.tsx  mail.tsx  mail_base.ts
App/utils/: bridge.ts  createMockData.tsx  index.tsx
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
ios/: Podfile  link-assets-manifest.json
ios/yukie_mail_rn/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/yukie_mail_rn.xcodeproj/: project.pbxproj
ios/yukie_mail_rnTests/: yukie_mail_rnTests.m
react-native-rust-invoker/: package.json  react-native-rust-invoker.podspec
react-native-rust-invoker/android/: CMakeLists.txt  build.gradle
react-native-rust-invoker/cpp/: react-native-rust-invoker.cpp  react-native-rust-invoker.h
react-native-rust-invoker/ios/: react-native-rust-invoker.mm  react-native-rust-invokerHeader.h
react-native-rust-invoker/js/: Nativereact-native-rust-invoker.ts  index.ts
rust/.cargo/: config
rust/mail_ffi/: .env  Cargo.toml  Cross.toml  Makefile  build.rs  copy_android.sh
rust/mail_ffi/configs/: log4rs.yaml
rust/mail_ffi/src/: android_ffi.rs  c_ffi.rs  lib.rs  string.rs  test.rs  uds.rs
rust/mail_ffi/src/bridge/: mod.rs
rust/mail_ffi/src/bridge/jni_impl/: mod.rs
rust/mail_ffi/src/bridge/message_data/: mod.rs
rust/mail_ffi/src/bridge/runtime/: mod.rs
rust/mail_ffi/src/counter/: mod.rs
rust/mail_ffi/src/logger/: mod.rs
rust/mail_ffi/src/protobuf/: command.proto
rust/mail_ffi/src/protobuf/ts/: command.ts
rust/protos/: command.proto
rust/yukie_mail/: .env  Cargo.toml  README.md  test_mail.html
rust/yukie_mail/idl/ts/: command.proto  command.ts  mail_base.proto  mail_base.ts
rust/yukie_mail/migrations/2023-04-20-091832_init/: up.sql
rust/yukie_mail/src/: lib.rs  main.rs  models.rs  schema.rs
rust/yukie_mail/src/client/: mod.rs
rust/yukie_mail/src/db/: account.rs  labels.rs  messages.rs  mod.rs  pool.rs
rust/yukie_mail/src/imap/: label_services.rs  message_services.rs  mod.rs  pool.rs
rust/yukie_mail/src/proto/: command.rs  mail_base.rs  mod.rs
rust/yukie_mail/src/protobuf/: command.proto
rust/yukie_mail/src/protobuf/ts/: command.ts
rust/yukie_mail/src/server/: handler.rs  mod.rs  route.rs
rust/yukie_mail/src/smtp/: mod.rs
rust/yukie_mail/src/tonic_server/: mod.rs
rust/yukie_mail/src/tonic_server/server_log/: mod.rs
rust/yukie_mail/src/tonic_server/service/: account.rs  labels.rs  message.rs  mod.rs
rust/yukie_mail/src/utils/: aes_gcm.rs  mod.rs
rust/yukie_mail/tests/: mod.rs
rust/yukie_mail/tests/imap/: mod.rs
rust/yukie_mail/tests/invoke/: mod.rs
rust/yukie_mail/tests/smtp/: mod.rs
vditor-mail/: package-lock.json  package.json
vditor-mail/src/: App.tsx
(+22 files in other folders)
