[package]
name = "mail_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mail_ffi"
crate-type = ["staticlib","cdylib"]

[dependencies]
libc = "0.2.140" 
jni = {version = "0.21.0",optional = true,default-features = false}

[features]
default = ["jni"]