[package]
name = "mail_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mail_ffi"
crate-type = ["staticlib","cdylib"]

[dependencies]
dotenvy = "0.15.7"
libc = "0.2.140" 
log = "0.4.17"
jni = {version = "0.21.0",optional = true,default-features = false}
anyhow = "1.0.70"
yukie_mail = { path = "../yukie_mail"}
num_cpus = "1.15.0"
tokio = { version = "1.27.0", features  = ["full"]}
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
log4rs = "1.2.0"
android_logger = {version = "0.11", optional = true}

[features]
default = ["android_jni"]
android_jni = ["dep:jni", "dep:android_logger"]
