[package]
name = "yukie_mail"
version = "0.1.0"
publish = false
authors = ["Kuze Hibiki <kuzehibiki@126.com>"]
license = "Apache-2.0/MIT"
readme = "README.md"
description = "Email Worker for RN fe"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common
diesel = { version = "2.0.0", features = ["sqlite","r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features  = ["full"]}
tokio-stream = {version="0.1", features = ["net"]}
anyhow = "1.0.70"
prost = "0.11.9"
futures = "0.3.28"
webpki = { package = "rustls-webpki", version = "0.100.0", features = ["alloc", "std"] }
webpki-roots = "0.22"
lazy_static = "1.4.0"
native-tls = { version = "0.2.8", features = ["alpn"] }
chrono = "0.4.24"
tonic = "0.9.2"
tower = "0.4"
aes-gcm = "0.10.1"
# log
log = "0.4.17"
log4rs = "1.2.0"
# env
dotenvy = "0.15.7"
# smtp
lettre = { version = "0.10.0",default-features = false, features=["smtp-transport","tokio1","tokio1-rustls-tls","builder"]}
# imap
imap = {version="3.0.0-alpha.10",default-features = false, features=["rustls-tls"]}
rustls-connector = { version = "0.16.1"}
utf7-imap = "0.3.2"
mailparse = "0.14.0"
# async-imap = { version = '0.8.0', default-features = false, optional = true }
# async-native-tls = { version = "0.5", default-features = false, optional = true }
# rustls-pemfile = "1.0"

openssl = { version = "0.10", features = ["vendored"] }

[features]
#default = ["runtime-tokio"]
#runtime-tokio = ["async-native-tls/runtime-tokio", "async-imap/runtime-tokio"]

[build-dependencies]
prost-build = "0.11.9"
tonic-build = "0.9.2"

[[bin]]
name = "tonic-client"
path = "src/bin/client.rs"

[[bin]]
name = "tonic-server"
path = "src/bin/server.rs"